--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="scripts/v1.0.0/visualisations/travel-search-term.js"></script>
     <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
     <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script>
+    <script src="scripts/v1.0.0/visualisations/covid19-cases-geography.js"></script>
 
 </head>
 
