climate change added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
     <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script>
     <script src="scripts/v1.0.0/visualisations/covid19-cases-geography.js"></script>
+    <script src="scripts/v1.0.0/visualisations/climate-change.js"></script>
+
 
 </head>
 
